--- a/CS639SpringHW1/app/src/main/res/values/strings.xml
+++ b/CS639SpringHW1/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CS639SpringHW1</string>
+    <string name="bird_fact">While most parrots only learn around 50 words, some African grey parrots have been known to learn hundreds. Einstein, a brilliant African grey parrot at the Knoxville Zoo in Tennessee, can say around 200 words.</string>
+    <string name="cat_fact">In the 1960s, the CIA tried to turn a cat into a bonafide spy by implanting a microphone into her ear and a radio transmitter at the base of her skull. She somehow survived the surgery but got hit by a taxi on her first mission.</string>
+    <string name="dog_fact">When your dog spins in a circle before settling down to snuggle, it is because he is making himself at home! This is a nesting trait carried down from their wilder ancestors.</string>
 </resources>
